# aoc-2025

./: .clang-format  .cmr  .gitignore  CMakeLists.txt  README.md
src/day01/: main.cpp  part-1.cpp  part1.cpp
src/day02/: main.cpp  part1.cpp
src/day03/: CMakeLists.txt  main.cpp  part1.cpp
src/day04/: CMakeLists.txt  main.cpp  part1.cpp
src/day05/: CMakeLists.txt  main.cpp  part1.cpp
src/day06/: CMakeLists.txt  main.cpp  part1.cpp
src/day07/: CMakeLists.txt  main.cpp  part1.cpp
src/day08/: CMakeLists.txt  main.cpp  part1.cpp
src/day09/: main.cpp  part1.cpp
src/day10/: main.cpp  part1.cpp
src/day11/: main.cpp  part1.cpp
src/day12/: CMakeLists.txt  main.cpp
